[package]
name = "cch23-trilowy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
shuttle-axum = { version = "0.35.1", default-features = false, features = [
    "axum-0-7",
] }
shuttle-runtime = "0.35.1"
tokio = "1.35.0"
tracing = "0.1.40"
serde = "1"
serde_json = "1"
tower-cookies = "0.10.0"
base64 = "0.21.5"
reqwest = { version = "0.11.22", features = ["json"] }
