[package]
name = "cch23-trilowy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.2", features = ["multipart"] }
shuttle-axum = { version = "0.35.1", default-features = false, features = [
    "axum-0-7",
] }
shuttle-runtime = "0.35.1"
tokio = "1.35.0"
tracing = "0.1.40"
serde = "1"
serde_json = "1"
tower-cookies = "0.10.0"
base64 = "0.21.5"
reqwest = { version = "0.11.22", features = ["json"] }
tower-http = { version = "0.5.0", features = ["fs"] }
image = "0.24.7"
ulid = { version = "1.1.0", features = ["serde", "uuid"] }
uuid = { version = "1.6.1", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
shuttle-shared-db = { version = "0.35.1", features = ["postgres"] }
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
emojis = "0.6.1"
sha256 = "1.4.0"
